syntax = "proto3";

option go_package = "github.com/hyperledger/fabric/core/ledger/kvledger/txmgmt/mtreecomp/mtreegrpc";

message MerkleRootRequest {
  string namespace = 1;
}

message MerkleRootResponse {
  bytes data = 1;
  bytes lastCommitHash = 2;
}

message SignedMerkleRootResponse {
  bytes serializedMerkleRootResponse = 1;
  bytes signature = 2;
}

service MerkleService {
  rpc getMerkleRoot(MerkleRootRequest) returns (SignedMerkleRootResponse) {}
}
